fix: 이미지 업로드시 불필요 파라미터 삭제